src/style/Annotation.scss
@import "./mixins_anntaton_color";

$annotated-text--default-theme: ();

$annotated-text-annotation-colors: (
  "1": #f51720,
  "2": #008d7c,
  "3": #ffbc05,
  "4": #8aff05,
  "5": #ff7ec3,
  "6": #05d1ff,
  "7": #6200d1,
  "8": #424600,
  "9": #613900,
);

.annotated-text {
  display: grid;
  row-gap: 0;
  column-gap: 5px;

  .content .token,
  .content .token-segment {
    display: inline-block;
    position: relative;
  }

  .token-segment {
    .text {
      white-space: pre;
      position: relative;
      z-index: 2000;
    }

    .create-anno-text {
      user-select: none;
    }
  }

  .annotation {
    cursor: pointer;
    label {
      cursor: pointer;
    }
  }

  .annotation--resize-handle {
    cursor: ew-resize;
  }

  &.action--active {
    user-select: none;
  }

  &.action--move {
    cursor: grabbing !important;

    .annotation {
      cursor: grabbing;
    }
  }

  &.acton--moveStart,
  &.action--moveEnd {
    cursor: ew-resize !important;

    .annotation {
      cursor: ew-resize !important;
    }
  }

  &.annotated-text--render-nested.theme-default {
    grid-template-columns: max-content max-content auto;

    // calculate line-part height
    @for $weight from 0 to 9 {
      .token-segment--m#{$weight} {
        padding-bottom: calc(2px + ($weight + 2) * 2px);
        padding-top: calc(2px + ($weight + 2) * 2px);
      }
    }

    .annotation {
      label {
        display: none;
      }
    }

    .content {
      .annotation {
        position: relative;
        label {
          display: none;
          background: white;
          font-size: 60%;
          font-family: Arial, Helvetica, sans-serif;
          border-radius: 3px;
          padding: 1px 2px;
          position: relative;
          z-index: 2000;
          top: -2px;
          margin: 0 2px;
          user-select: none;
        }

        .handle {
          display: inline-block;
          background: red;
          cursor: ew-resize;
          position: absolute;
          z-index: 10000;
          height: 100%;
          opacity: 0;
          width: 4px;
          // display: none;
        }

        .handle--end {
          right: 0;
        }

        .handle--start {
          left: 0;
        }

        &.annotation--transitioning {
          &:before {
            border-color: red !important;
            border-width: 2px !important;
          }

          .handle {
            display: none;
          }
        }
        &.annotation--shadow {
          &:before {
            border-color: rgba(0, 0, 0, 0.5) !important;
            border-width: 2px !important;
            fill-opacity: 0.5;
            background-color: rgba(1, 1, 1, 0.1);
          }

          .handle {
            display: none;
          }
        }

        &.annotation--hover {
          &:before {
            border-color: rgba(100, 100, 100, 0.5) !important;
            border-width: 1px !important;
            fill-opacity: 0.5;
            background-color: rgba(1, 1, 1, 0.1);
          }
        }
      }

      .annotation--start::before {
        border-top-left-radius: 4px;
        border-bottom-left-radius: 4px;
      }

      .annotation--end::before {
        border-top-right-radius: 4px;
        border-bottom-right-radius: 4px;
      }

      .annotation--active {
        user-select: none;
      }

      @for $weight from 0 to 9 {
        .annotation--weight-#{$weight}::before,
        .annotation--w#{$weight}::before {
          box-sizing: border-box;
          top: (-3px * ($weight + 1));
          height: calc(1.1rem + calc(3px * 2 * ($weight + 1)));
          z-index: calc(1010 - $weight);
          position: absolute;
          content: "";
          background: rgb(255, 0, 0, 0.3);
          width: 100%;
        }
      }

      @each $name, $color in $annotated-text-annotation-colors {
        .annotation--color-#{$name},
        .annotation--c#{$name} {
          --annotation-bg-color: #{rgba($color, 0.3)};
          --annotation-border-color: #{rgba($color, 0.3)};
          --annotation-border-color--active: #{rgba($color, 0.9)};
          --annotation-bg-color--active: #{color-mix(
              in srgb,
              white,
              $color 30%
            )};

          @include createAnnotationColor();
        }
      }

      .annotation--color-custom {
        @include createAnnotationColor();
      }

      .annotation-slot {
        z-index: 1000000;
        background-color: white;
        display: flex;
        position: absolute;

        &.annotation-slot--after {
          top: -0.5em;
          left: calc(100% + 0.5em);
        }

        &.annotation-slot--before {
          top: -0.5em;
          right: -0.5em;
        }
      }
    }

    &.annotated-text--show-labels .content .annotation--end > label {
      display: inline-block;
    }

    //Never show  gutter labels
    &.annotated-text--show-labels .gutter-annotations .annotation--end > label {
      display: none;
    }
  }

  &.annotated-text--render-flat.theme-default {
    grid-template-columns: max-content max-content auto;

    // calculate line-part height
    @for $weight from 0 to 9 {
      .token-segment--m#{$weight} {
        margin-bottom: calc(4px + ($weight + 1) * 4px);
      }
    }

    .annotation {
      label {
        display: none;
      }
    }

    @each $name, $color in $annotated-text-annotation-colors {
      .annotation--color-#{$name} {
        background: $color;
        label {
          font-family: Arial, Helvetica, sans-serif;
          left: 0;
          font-size: 60%;
          color: white;
        }
      }
    }

    //content annotation styling
    .content {
      height: 100%;
      template {
        height: 100%;
        span {
          height: 100%;
          span {
            height: 100%;
          }
        }
      }

      .annotation {
        position: absolute;
        left: 0;
        width: calc(100% + 0px);
        height: 100%;
        background: rgb(255, 0, 0);

        label {
          display: none;
          position: absolute;
          font-family: Arial, Helvetica, sans-serif;
          left: 0;
          font-size: 60%;
          padding: 1px 2px;
          color: white;
          background: rgb(255, 0, 0);
          user-select: none;
        }
      }

      .annotation--start {
        left: -1px;
        width: calc(100% + 1px);
        border-top-left-radius: 3px;
        border-bottom-left-radius: 3px;
      }

      .annotation--end {
        right: -1px;
        width: calc(100% + 1px);
        border-top-right-radius: 3px;
        border-bottom-right-radius: 3px;
      }

      @for $weight from 0 to 9 {
        .annotation--w#{$weight} {
          top: calc(18px + 4px * $weight);
          z-index: calc(10 + $weight);
        }

        &.annotated-text--show-labels .annotation--w#{$weight} {
          top: calc(18px + 12px * $weight);
        }
      }

      @each $name, $color in $annotated-text-annotation-colors {
        .annotation--color-#{$name} {
          background: $color;
          label {
            background: $color;
          }
        }
      }
    }

    &.annotated-text--show-labels {
      .content .annotation.annotation--start label {
        display: block;
      }

      @for $weight from 0 to 9 {
        .token-segment--m#{$weight} {
          margin-bottom: calc(4px + ($weight + 1) * 12px);
        }
      }
    }
  }
}

